--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -6,6 +6,7 @@ project_url: "https://sqlitebrowser.org/"
 project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/sqlitebrowser-banner.png"
 project_blurb: "[DB Browser for SQLite]({{ project_url }}) is a high quality, visual, open source tool to create, design, and edit database files compatible with SQLite."
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
+project_categories: "Databases"
 project_blurb_optional_extras_enabled: false
 # supported architectures
 available_architectures:
