--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -102,6 +102,7 @@ init_diagram: |
   "sqlitebrowser:latest" <- Base Images
 # changelog
 changelogs:
+  - {date: "30.07.25:", desc: "Install Qt SVG for icon support."}
   - {date: "12.07.25:", desc: "Rebase to Selkies and Alpine 3.22, HTTPS IS NOW REQUIRED."}
   - {date: "06.12.24:", desc: "Rebase to Alpine 3.21."}
   - {date: "23.05.24:", desc: "Rebase to Alpine 3.20."}
